--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi" translate="no">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trang Chủ</title>
 </head>
+
 <body>
-    <h1>hello world </h1>
+    <header>
+        <h1>Nguyễn Đăng Tân</h1>
+        <h2>Các Thông Tin</h2>
+    </header>
+    <nav>
+        <li><a href="thongtincanhan.html">Thông Tin Cá Nhân</a></li>
+        <li><a href="sothich.html">Sở Thích Cá Nhân</a></li>
+        <li><a href="chuyenmon.html">Chuyên Môn Bản Thân</a></li>
+        <li><a href="thethao.html">Thể Thao</a></li>
+        <li><a href="phim.html">Phim Đã Xem</a></li>
+        <li><a href="MXH.html">Mạng Xã Hội</a></li>
+        <li><a href="chamngon.html">Châm Ngôn Sống</a></li>
+        <li><a href="sach.html">Sách Đã Đọc</a></li>
+        <li><a href="dulich.html">Địa Điểm Đã Đi</a></li>
+        <li><a href="idol.html">Ca Sĩ yêu thích</a></li>
+    </nav>
+    <section>
+        <h2>Nội Dung Chính</h2>
+        <strong><p>Chào các bạn đây là web chứa thông tin về NDT</p></strong>
+    </section>
+    <footer>
+        <h3>Liên Hệ</h3>
+        <p> Sđt: +0347233405</p>
+        <p> Email: dangtan236@gmail.com</p>
+        <p>© 2024 Trang Web of NDT</p>
+    </footer>
 </body>
+
 </html>
