--- a/chamngon.html
+++ b/chamngon.html
@@ -24,9 +24,32 @@
         <li><a href="dulich.html">Địa Điểm Đã Đi</a></li>
         <li><a href="tienganh.html">Tiếng Anh</a></li>
     </nav>
+    <header>
+        <h1>Châm Ngôn</h1>
+    </header>
+    
     <section>
-        <h2>Nội Dung Chính</h2>
-        <strong><p>Chào các bạn đây là web chứa thông tin về NDT</p></strong>
+        <strong>
+            <h2>Châm Ngôn 1</h2>
+        </strong>
+        <em>
+            <p>Đừng bao giờ níu kéo những thứ không phải của mình </p>
+            <p>Mà phải giật nhiệt tình, chừng nào thuộc về mình thì thôi...</p>
+        </em>
+        <strong>
+            <h2>Châm Ngôn 2</h2>
+        </strong>
+        <em>
+            <p>Thích là phải nhích cho tới đích  </p>
+            <p>Một khi không nhích thì mất tích không cần giải thích.</p>
+        </em>
+        <strong>
+            <h2>Châm Ngôn 3</h2>
+        </strong>
+        <em>
+            <p>Khi cuộc đời cho bạn cả trăm lý do để khóc</p>
+            <p>Hãy cho đời thấy bạn có cả ngàn lý do để cười</p>
+        </em>
     </section>
     <footer>
         <h3>Liên Hệ</h3>
@@ -34,6 +57,7 @@
         <p> Email: dangtan236@gmail.com</p>
         <p>© 2024 Trang Web of NDT</p>
     </footer>
+    <u><a href="index.html" target="_blank">Quay lại trang chủ</a></u>
 </body>
 
 </html>
