--- a/phim.html
+++ b/phim.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Châm Ngôn</title>
+    <title>Phim đã xem</title>
 </head>
 
 <body>
@@ -24,16 +24,46 @@
         <li><a href="dulich.html">Địa Điểm Đã Đi</a></li>
         <li><a href="tienganh.html">Tiếng Anh</a></li>
     </nav>
+    <header>
+        <h1>Phim</h1>
+        <h2>Danh sách phim đã xem</h2>
+    </header>
+    <nav>
+        <li>Tầng lớp ITAEWON</a></li>
+        <li>Hospital playlist</a></li>
+        <li>Happiness</a></li>
+    </nav>
     <section>
-        <h2>Nội Dung Chính</h2>
-        <strong><p>Chào các bạn đây là web chứa thông tin về NDT</p></strong>
-    </section>
+        <h2>Tầng lớp ITAEWON</h2>
+        <ul>
+            <li><b>Đạo diễn: </b>KYM SUNG-YOON</li>
+            <li><b>Số Tập: </b>15</li>
+            <li><b>Thể loại: </b>Lãng mạn</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Hospital playlist</h2>
+        <ul>
+            <li><b>Đạo diễn: </b>Shin WON-HO</li>
+            <li><b>Số Tập: </b>24</li>
+            <li><b>Thể loại: </b>Lãng mạn</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Happiness</h2>
+        <ul>
+            <li><b>Đạo diễn: </b>Ahn Gil Ho</li>
+            <li><b>Số Tập: </b>16</li>
+            <li><b>Thể loại: </b>Hành động</li>
+        </ul>
+      </section>
     <footer>
         <h3>Liên Hệ</h3>
         <p> Sđt: +0347233405</p>
         <p> Email: dangtan236@gmail.com</p>
         <p>© 2024 Trang Web of NDT</p>
     </footer>
+    <u><a href="index.html" target="_blank">Quay lại trang chủ</a></u>
 </body>
 
 </html>
