--- a/sothich.html
+++ b/sothich.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Châm Ngôn</title>
+    <title>Sở thích</title>
 </head>
 
 <body>
@@ -24,16 +24,51 @@
         <li><a href="dulich.html">Địa Điểm Đã Đi</a></li>
         <li><a href="tienganh.html">Tiếng Anh</a></li>
     </nav>
+    <header>
+        <h1>Sở Thích</h1>
+    </header>
+   
     <section>
-        <h2>Nội Dung Chính</h2>
-        <strong><p>Chào các bạn đây là web chứa thông tin về NDT</p></strong>
-    </section>
+        <h2>1 Đọc sách</h2>
+        <h3>1.1 Thể loại ưa thích</h3>
+        <ul>
+            <li><b>Trinh thám</li>
+            <li><b>Ngôn tình</li>
+            <li><b>Truyền cảm hứng</li>
+        </ul>
+      </section>
+      <section>
+        <h3>1.2 Một vài cuốn sách đã đọc</h3>
+        <ul>
+            <li>Nhà giả kim</li>
+            <li>Thú tội</li>
+            <li>Rừng Nauy</li>
+        </ul>
+      </section>
+      <section>
+        <h2>2 Nghe nhạc</h2>
+        <h3>1.1 Thể loại ưa thích</h3>
+        <ul>
+            <li><b>Rap</li>
+            <li><b>VPOP</li>
+            <li><b>Bolero</li>
+        </ul>
+      </section>
+      <section>
+        <h3>1.2 Ca sĩ yêu thích</h3>
+        <ul>
+            <li>Noo Phước Thịnh</li>
+            <li>Sơn Tùng MTP</li>
+            <li>Hồ Quang Hiếu</li>
+        </ul>
+      </section>
     <footer>
         <h3>Liên Hệ</h3>
         <p> Sđt: +0347233405</p>
         <p> Email: dangtan236@gmail.com</p>
         <p>© 2024 Trang Web of NDT</p>
     </footer>
+    <u><a href="index.html" target="_blank">Quay lại trang chủ</a></u>
 </body>
 
 </html>
