--- a/thethao.html
+++ b/thethao.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Châm Ngôn</title>
+    <title>Thể Thao</title>
 </head>
 
 <body>
@@ -24,16 +24,37 @@
         <li><a href="dulich.html">Địa Điểm Đã Đi</a></li>
         <li><a href="tienganh.html">Tiếng Anh</a></li>
     </nav>
+    <header>
+        <h1>Thể Thao</h1>
+        <h2>Danh sách môn thể thao yêu thích</h2>
+    </header>
+    <nav>
+        <li>Bóng đá</a></li>
+        <li>Bóng chuyền</a></li>
+    </nav>
     <section>
-        <h2>Nội Dung Chính</h2>
-        <strong><p>Chào các bạn đây là web chứa thông tin về NDT</p></strong>
-    </section>
+        <h2>Bóng Đá</h2>
+        <ul>
+            <li><b>Vận động viên ưa thích: </b>Lion Messi</li>
+            <li><b>Vị trí: </b>Tiền đạo</li>
+            <li><b>Trình độ: </b>Nghiệp dư</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Bóng Chuyền</h2>
+        <ul>
+            <li><b>Vận động viên ưa thích: </b>Không có</li>
+            <li><b>Vị trí: </b>Cầu 2</li>
+            <li><b>Trình độ: </b>Nghiệp dư</li>
+        </ul>
+      </section>
     <footer>
         <h3>Liên Hệ</h3>
         <p> Sđt: +0347233405</p>
         <p> Email: dangtan236@gmail.com</p>
         <p>© 2024 Trang Web of NDT</p>
     </footer>
+    <u><a href="index.html" target="_blank">Quay lại trang chủ</a></u>
 </body>
 
 </html>
