--- a/tienganh.html
+++ b/tienganh.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Châm Ngôn</title>
+    <title>Tiếng Anh</title>
 </head>
 
 <body>
@@ -24,16 +24,35 @@
         <li><a href="dulich.html">Địa Điểm Đã Đi</a></li>
         <li><a href="tienganh.html">Tiếng Anh</a></li>
     </nav>
+    <header>
+        <h1>Tiếng Anh</h1>
+        <h2>Danh sách môn thể thao yêu thích</h2>
+    </header>
     <section>
-        <h2>Nội Dung Chính</h2>
-        <strong><p>Chào các bạn đây là web chứa thông tin về NDT</p></strong>
-    </section>
+        <h2>TOEIC</h2>
+        <ul>
+            <li><b>Listening: </b>300</li>
+            <li><b>Readding: </b>300</li>
+            <li><b>Writing: </b>140</li>
+            <li><b>Speaking: </b>150</li>
+        </ul>
+      </section>
+      <section>
+        <h2>IELTS</h2>
+        <ul>
+            <li><b>Listening: </b>5.0</li>
+            <li><b>Readding: </b>5.0</li>
+            <li><b>Writing: </b>5.0</li>
+            <li><b>Speaking: </b>5.0</li>
+        </ul>
+      </section>
     <footer>
         <h3>Liên Hệ</h3>
         <p> Sđt: +0347233405</p>
         <p> Email: dangtan236@gmail.com</p>
         <p>© 2024 Trang Web of NDT</p>
     </footer>
+    <u><a href="index.html" target="_blank">Quay lại trang chủ</a></u>
 </body>
 
 </html>
